--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="home">
                 <br>
                 <div class="welcome">
-                    <h1>WELCOME {{user.user.fullName}}</h1>
+                    <h1>WELCOME {{data.user.fullName}}</h1>
                     <br>
                     <p>Below are Two responsive webpages developed using 2 different frameworks</p>
                     <br>
