--- a/index-bootstrap.html
+++ b/index-bootstrap.html
@@ -70,11 +70,7 @@
                     <img class="col-12 rounded mask" id="silicon-valey-pic" src="{{data.city.photo}}" alt="silicon valley" />
                 </div>
                 <div class="col-md-8">
-                    <p>Silicon Valley is known as the cratle of innivation, 
-                    it is where most well known top know Tech companies Originated.
-                    Big names like Google, Facebook, Amazon, Apple, Netflix and more...all reside at Silicon Valley.
-                    Silicon Valley is a region in Northern California that serves as a global center for high technology and innovation.
-                    It is located in the southern part of the San Francisco Bay Area</p>
+                    <p>{{data.city.description}}</p>
                 </div>
 
             </div>
