almost ready for submission

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             }
             
             body{
-                background-image: url("images/itachi1.jpg");
+                background-image: url("/images/table-mountain.jpeg");
                 background-size: cover;
                 color: white;
             }
