--- a/index-materialize.html
+++ b/index-materialize.html
@@ -32,7 +32,8 @@
                     padding: 0.5em;
                     width: 100%;
                     text-align: center;
-                    background-color: rgba(255, 255, 255, 0.3);">
+                    background-color: rgba(255, 255, 255, 0.3);
+                    background-image: url(/images/table-mountain.jpeg); background-size: cover">
                 
                     <div class="col s12 m6 center-align" >
                         <h2 class="center-align" style="">{{data.user.fullName}}</h2>
