--- a/index-materialize.html
+++ b/index-materialize.html
@@ -19,7 +19,6 @@
                   <a href="/responsive_webpages/index.html" class="brand-logo left">Home</a>
                   <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="/responsive_webpages/index-bootstrap.html">Bootstrap</a></li>
-                    <li><a href="/responsive_webpages/index-materialize.html">Materialize</a></li>
                   </ul>
                 </div>
             </nav>
@@ -35,8 +34,11 @@
                     background-color: rgba(255, 255, 255, 0.3);
                     background-image: url(/images/table-mountain.jpeg); background-size: cover">
                 
-                    <div class="col s12 m6 center-align" >
-                        <h2 class="center-align" style="">{{data.user.fullName}}</h2>
+                    <div class="col s12 m6" style="text-align: center;
+                    justify-content: center; margin: auto; display: flex; 
+                    color: white">
+                        <br>
+                        <h2 class="center-align">{{data.user.fullName}}</h2>
                     </div>
                     <div class="col s12 m6 center-align">
                         <figure>
@@ -49,18 +51,18 @@
                 <div class="row" style="color: white">
                     <h4 class="" >{{data.city.name}}</h4>
 
-                    <div class="col s12 m4">
+                    <div class="col s12 m5">
                         <img class="col s12 m12 rounded mask" id="silicon-valey-pic" src="{{data.city.photo}}" alt="silicon valley" />
                     </div>
-                    <div class="col s12 m8">
-                        <p>{{data.city.description}}</p>
+                    <div class="col s12 m7">
+                        <p style="font-size: 18px">{{data.city.description}}</p>
                     </div>
 
                 </div>
 
                 <hr />
 
-                <div class="" style="background-color: rgba(0, 0, 0, 0.9)">
+                <div class="" style="background-color: rgba(0, 0, 0, 0.9); padding: 0.7em">
                     <h4 style="color: white">{{data.foreignLanguage.language}}</h4>
                 </div>
 
@@ -102,13 +104,14 @@
 
                 <h4 class="center-align" style="margin: auto; color: white">Favourite Subjects</h4>
                 
-                <div class="row center-align" style="width: 100%">
+                <div class="row" style="margin: auto; background-color: rgba(0, 0, 0, 0.8);">
                     {{#each data.favouriteSubjects}}
-                        <div class="col s12 m4 card" style="height: 200px;">
+                        <div class="col s12 m4" style="height: 200px; color: white">
                             <div class="card-body">
                                 <h5 class="card-title center-align">{{name}}</h5>
                                 <hr>
                                 <p class="card-text">{{description}}</p>
+                                <br>
                             </div>
                         </div>
                     {{/each}}
@@ -122,10 +125,10 @@
         <footer>
             <div class="center-align #33383a teal darken-4" style="color: white">
                 <br>
-                <h5>Mojewa Tswelopele</h5>
-                <h6>@2023</h6>
+                <p>Mojewa Tswelopele</p>
+                <p>@2023</p>
             </div>
         </footer>
-        <script src="" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
