--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="home">
                 <br>
                 <div class="welcome">
-                    <h1>WELCOME {{data.user.fullName}}</h1>
+                    <h1>{{data.user.fullName}}</h1>
                     <br>
                     <p>Below are Two responsive webpages developed using 2 different frameworks</p>
                     <br>
